get meta deta api for gender and contact
