# config/routesValues.js
@@ -15,5 +15,6 @@ exports.routeValues = {
   "/contact/update-contact": "c2a04e70f16541f5b52f1b0803ee46d3", //done
   "/profile/get-entity-contact-list": "c2a04e70f16541f5b52f1b0803ee46d3",
   "/profile/get-nominee-details": "c2a04e70f16541f5b52f1b0803ee46d3",
-  "/profile/update-contact": "c2a04e70f16541f5b52f1b0803ee46d3"
+  "/profile/update-contact": "c2a04e70f16541f5b52f1b0803ee46d3",
+  "/profile/get-meta-data": "c2a04e70f16541f5b52f1b0803ee46d3"
 };
