# routes/profile.js
@@ -13,10 +13,15 @@ async function profileRoutes(fastify, options) {
         { preHandler: [authentication, validation] },
         profile.getNomineeDetails
     );
-    fastify.post(
+    fastify.put(
         "/update-contact",
         { preHandler: [authentication, validation] },
         profile.updateContact
+    );
+    fastify.get(
+        "/get-meta-data",
+        { preHandler: [authentication, validation] },
+        profile.getMetaData
     );
   }
   
